--- a/TravelDreamWeb/.settings/org.eclipse.wst.common.component
+++ b/TravelDreamWeb/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="TravelDreamWeb">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
         <property name="context-root" value="TravelDreamWeb"/>
         <property name="java-output-path" value="/TravelDreamWeb/build/classes"/>
     </wb-module>
