--- a/trunk/TravelDreamWeb/WebContent/resources/css/main.css
+++ b/trunk/TravelDreamWeb/WebContent/resources/css/main.css
@@ -33,6 +33,8 @@
 	width: 700px;
 	margin-right:16px;
 	margin-bottom:10px;
+	padding-top:20px;
+	padding-bottom:20px;
 	border:1px solid #fff;
     box-shadow:0px 2px 7px #292929;
     -moz-box-shadow: 0px 2px 7px #292929;
@@ -62,13 +64,33 @@
 #menu{
 	background-image: url("#{resource['img:menu2.png']}");
 	width: 200px;
-	height:500px;
+	height:350px;
 	margin-bottom:10px;
 	background-repeat:no-repeat;
     float:left;
 }
 
-#login{
+#pag{
 	margin-top:20px;
 	margin-bottom:20px;
+}
+
+div#left{
+	position:relative;
+	top:50px;
+	left:13px;
+	width:160px;
+	height:230px;
+}
+
+div#leftIm{
+	position:relative;
+	top:50px;
+	left:13px;
+	width:160px;
+	height:250px;
+}
+
+.ui-menuitem-text{
+	font-size:medium;
 }
